[package]
name = "hello_egui"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A collection of useful crates for egui."
repository = "https://github.com/lucasmerlin/hello_egui"
homepage = "https://lucasmerlin.github.io/hello_egui/"
keywords = ["egui", "gui", "ui", "widgets"]

[workspace.package]
edition = "2021"
authors = ["Lucas Meurer"]
license = "MIT"

[package.metadata.release]
tag-prefix = "hello_egui-"

[package.metadata.docs.rs]
all-features = true

[features]
all = [
    "animation",
    "dnd",
    "flex",
    "form",
    "inbox",
    "infinite_scroll",
    "pull_to_refresh",
    "router",
    "suspense",
    "thumbhash",
    "virtual_list",
]
full = ["all", "async", "tokio"]

animation = ["dep:egui_animation"]
async = [
    "egui_suspense/async",
    "egui_infinite_scroll/async",
    "egui_router/async",
    "egui_inbox/async",
]
dnd = ["dep:egui_dnd"]
flex = ["dep:egui_flex"]
form = ["dep:egui_form"]
inbox = ["dep:egui_inbox"]
infinite_scroll = ["dep:egui_infinite_scroll"]
pull_to_refresh = ["dep:egui_pull_to_refresh"]
router = ["dep:egui_router"]
suspense = ["dep:egui_suspense"]
thumbhash = ["dep:egui_thumbhash"]
tokio = ["egui_suspense/tokio", "egui_infinite_scroll/tokio"]
virtual_list = ["dep:egui_virtual_list"]
material_icons = ["dep:egui_material_icons"]

[dependencies]
egui_animation = { workspace = true, optional = true }
egui_dnd = { workspace = true, optional = true }
egui_inbox = { workspace = true, optional = true }
egui_flex = { workspace = true, optional = true }
egui_form = { workspace = true, optional = true }
egui_infinite_scroll = { workspace = true, optional = true }
egui_pull_to_refresh = { workspace = true, optional = true }
egui_router = { workspace = true, optional = true }
egui_suspense = { workspace = true, optional = true }
egui_thumbhash = { workspace = true, optional = true }
egui_virtual_list = { workspace = true, optional = true }
egui_material_icons = { workspace = true, optional = true }

[dev-dependencies]
hello_egui_utils = { version = "0.8.0", features = ["example_util"] }
egui.workspace = true



[workspace]
members = ["fancy-example", "crates/*", "scripts"]
resolver = "2"

[workspace.dependencies]
egui_dnd = { path = "./crates/egui_dnd", version = "0.12.0" }
egui_animation = { path = "./crates/egui_animation", version = "0.8.0" }
hello_egui_utils = { path = "./crates/hello_egui_utils", version = "0.8.0" }
egui_flex = { path = "./crates/egui_flex", version = "0.3.0" }
egui_form = { path = "./crates/egui_form", version = "0.5.0" }
egui_inbox = { path = "./crates/egui_inbox", version = "0.8.0" }
egui_pull_to_refresh = { path = "./crates/egui_pull_to_refresh", version = "0.8.0" }
egui_router = { path = "./crates/egui_router", version = "0.4.0" }
egui_suspense = { path = "./crates/egui_suspense", version = "0.8.0" }
egui_virtual_list = { path = "./crates/egui_virtual_list", version = "0.7.0" }
egui_infinite_scroll = { path = "./crates/egui_infinite_scroll", version = "0.7.0" }
egui_thumbhash = { path = "./crates/egui_thumbhash", version = "0.7.0" }
egui_material_icons = { path = "./crates/egui_material_icons", version = "0.3.0" }
hello_egui = { path = ".", version = "0.8.0" }

egui = { version = "0.31.0", default-features = false }
egui_kittest = { version = "0.31" }
eframe = { version = "0.31.0", default-features = false }
egui_extras = { version = "0.31.0", default-features = false }
rand = "0.9.0"
simple-easing = "1"
serde_json = "1"
ehttp = "0.5.0"
tokio = "1"
futures = "0.3"
serde = "1"
image = "0.25"
log = "0.4"

[workspace.lints.rust]
unsafe_code = "deny"
deprecated = "warn"
elided_lifetimes_in_paths = "warn"
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"                         # `unsafe_op_in_unsafe_fn` may become the default in future Rust versions: https://github.com/rust-lang/rust/issues/71668
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# nursery = "warn" # Optionally enable in the future

#######
float_cmp = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# Additional lints from https://rust-lang.github.io/rust-clippy/master/index.html?groups=restriction
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
create_dir = "warn"
# clone_on_ref_ptr = "warn" # might be interesting to enable in the future
# expect_used = "warn" # Should definitely be enabled in the future
missing_assert_message = "warn"
panic_in_result_fn = "warn"
str_to_string = "warn"
todo = "warn"
# unwrap_used = "warn" # Should definitely be enabled in the future
unimplemented = "warn"
wildcard_enum_match_arm = "warn"

[patch.crates-io]
#wry = { path = "../../RustroverProjects/github/wry" }
#
#egui = { path = "../../IdeaProjects/egui/crates/egui" }
#eframe = { path = "../../IdeaProjects/egui/crates/eframe" }
#egui-wgpu = { path = "../../IdeaProjects/egui/crates/egui-wgpu" }
#egui_extras = { path = "../../IdeaProjects/egui/crates/egui_extras" }
#egui_kittest = { path = "../../IdeaProjects/egui/crates/egui_kittest" }
#winit = { path = "../../IdeaProjects/github/winit" }


# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }
# egui_extras = { git = "https://github.com/emilk/egui", branch = "master" }
# egui_kittest = { git = "https://github.com/emilk/egui", branch = "master" }
