[package]
name = "fancy-example"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.release]
release = false

[dependencies]
egui_animation.workspace = true
egui_dnd.workspace = true
egui_form = { workspace = true, features = ["validator_validator"] }
egui_suspense = { workspace = true, features = ["tokio", "async"] }
egui_inbox.workspace = true
egui_infinite_scroll.workspace = true
egui_pull_to_refresh.workspace = true
egui_thumbhash.workspace = true
egui_router.workspace = true
egui_flex.workspace = true
hello_egui_utils.workspace = true

egui = { workspace = true, features = ["color-hex"] }
eframe = { workspace = true, default-features = true }
egui_extras = { workspace = true, features = ["http", "image"] }
ehttp = { version = "0.5.0" }
thumbhash = "0.1.0"

image = { version = "0.25.1", features = ["jpeg", "png", "webp"] }
color-hex = "0.2.0"

wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

casey = "0.4.0"

egui_commonmark = { version = "0.18.0", features = [] }

validator = { version = "0.18.1", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time", "rt", "macros"] }
ureq = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.39"
gloo-timers = { version = "0.3.0", features = ["futures"] }
