[package]
name = "fancy-example"
version = "0.1.0"
edition = "2021"
publish = false

default-run = "fancy-example"

[package.metadata.release]
release = false

[features]
mock = []

[dependencies]
egui_animation.workspace = true
egui_dnd.workspace = true
egui_form = { workspace = true, features = ["validator_validator"] }
egui_inbox.workspace = true
egui_infinite_scroll.workspace = true
egui_pull_to_refresh.workspace = true
egui_thumbhash.workspace = true
egui_router.workspace = true
egui_flex.workspace = true
hello_egui_utils.workspace = true

egui = { workspace = true, features = ["color-hex"] }
eframe = { workspace = true, default-features = true }
egui_extras = { workspace = true, features = ["http", "image", "all_loaders"] }
ehttp.workspace = true
thumbhash = "0.1.0"

image = { workspace = true, features = ["jpeg", "png", "webp"] }

wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

casey = "0.4.2"

egui_commonmark = { version = "0.20.0", features = [] }

validator = { version = "0.20.0", features = ["derive"] }
env_logger = "0.11"

[dev-dependencies]
fancy-example = { path = ".", features = ["mock"] }
egui_kittest = { workspace = true, features = ["wgpu", "snapshot"] }
eframe = { workspace = true, features = ["wgpu"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["time", "rt", "macros"] }
ureq = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[lints]
workspace = true
