[package]
name = "egui_animation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_egui_utils = { path = "../hello_egui_utils" }

egui.workspace = true

simple-easing = "1"

[dev-dependencies]
eframe =  { workspace = true, default-features = true}
rand = "0.8.5"
