[package]
name = "egui_dnd"
version = "0.9.1"
edition = "2021"
authors = ["Lucas Meurer"]
repository = "https://github.com/lucasmerlin/hello_egui"
homepage = "https://lucasmerlin.github.io/hello_egui/"
keywords = ["egui", "drag", "drop", "ui"]
description = "A drag and drop library for egui"
license = "MIT"


[dependencies]
egui_animation.workspace = true

egui.workspace = true

simple-easing = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"

[dev-dependencies]
egui_infinite_scroll = { path = "../egui_infinite_scroll" }
egui_virtual_list = { path = "../egui_virtual_list" }
hello_egui_utils = { path = "../hello_egui_utils" }
rand = "0.8"

egui_extras.workspace = true
color-hex = "0.2.0"
egui = { workspace = true, features = ["color-hex"] }
eframe = { workspace = true, default-features = true }

[lints]
workspace = true
