[package]
name = "egui_flex"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/lucasmerlin/hello_egui/tree/main/crates/egui_flex"
description = "A flexbox-like layout system for egui."
keywords = ["egui", "flexbox", "layout", "gui"]
categories = ["gui"]
license = "MIT"
homepage = ""


[dependencies]
egui.workspace = true
log.workspace = true

[dev-dependencies]
eframe = { workspace = true, default-features = true }
egui_inbox.workspace = true

[lints]
workspace = true
