[package]
name = "egui_flex"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/lucasmerlin/hello_egui/tree/main/crates/egui_flex"
homepage = "https://lucasmerlin.github.io/hello_egui/#/example/flex"
description = "A flexbox-like layout system for egui."
keywords = ["egui", "flexbox", "layout", "gui"]
categories = ["gui"]
license = "MIT"


[dependencies]
egui.workspace = true

[dev-dependencies]
eframe = { workspace = true, default-features = true, features = ["wgpu"] }
egui = { workspace = true, features = ["callstack"] }
egui_inbox.workspace = true
hello_egui_utils = { workspace = true, features = ["example_util"] }

egui_kittest = { workspace = true, features = ["wgpu", "snapshot"] }
rstest = "0.24.0"

[lints]
workspace = true
