[package]
name = "egui_material_icons"
version = "0.5.0"
edition = "2021"
categories = ["gui"]
keywords = ["egui", "icons", "material"]
description = "Material icons for egui."
license = "MIT"
repository = "https://github.com/lucasmerlin/hello_egui/tree/main/crates/egui_material_icons"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["filled", "compressed"]
## Include the filled font variant.
filled = []
## Include the outline font variant. Adds `ICON_OUTLINE_*` constants.
outline = []
## Compress embedded fonts with DEFLATE. Reduces binary size significantly.
compressed = ["dep:include-flate"]

[dependencies]
egui.workspace = true
include-flate = { version = "0.3", optional = true }

[dev-dependencies]
eframe = { workspace = true, default-features = true }
egui_demo_lib = "0.31"
