[package]
name = "egui_material_icons"
version = "0.6.0"
edition = "2021"
categories = ["gui"]
keywords = ["egui", "icons", "material"]
description = "Material icons for egui."
license = "MIT"
repository = "https://github.com/lucasmerlin/hello_egui/tree/main/crates/egui_material_icons"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["filled"]
## Include the filled font variant.
filled = []
## Include the outline font variant.
outline = []
## Compress embedded fonts with DEFLATE at compile time, decompressing at runtime.
## This reduces the binary size for native targets but is counterproductive for wasm,
## where transport compression (gzip/brotli) is more effective and the decompression
## runtime (zstd + libflate) adds significant overhead.
compressed = ["dep:include-flate"]

[dependencies]
egui.workspace = true
include-flate = { version = "0.3.2", optional = true }

[dev-dependencies]
eframe = { workspace = true, default-features = true }
